ID-4416 ID-4425 fix arrow behavior for existing collapsable section add new collapsable section css (to be used in new component with new markup) add trimmed version of drop arrow (existing had too much padding/extra space)

--- a/packages/ui-library/src/css/icons.scss
+++ b/packages/ui-library/src/css/icons.scss
@@ -50,6 +50,7 @@
 .icon-dropdown-arrow:before { content: "\76"; }
 .icon-edit:before { content: "\65"; }
 .icon-expand:before { content: "\45"; }
+.icon-expand-arrow:before { content: "\59"; }
 .icon-filter:before { content: "\66"; }
 .icon-globe:before { content: "\a1"; }
 .icon-grip:before { content: "\47"; }
